test/e2e/setup/zookeeper.yaml
apiVersion: zookeeper.kubedoop.dev/v1alpha1
kind: ZookeeperCluster
metadata:
  name: zookeepercluster-sample
spec:
  clusterConfig:
    listenerClass: external-unstable
  servers:
    config:
      resources:
        cpu:
          min: "100m"
          max: "200m"
        memory:
          limit: "1Gi"
    roleGroups:
      default:
        replicas: 1
---
apiVersion: zookeeper.kubedoop.dev/v1alpha1
kind: ZookeeperZnode
metadata:
  name: sample-hdfs-znode
spec:
  clusterRef:
    name: zookeepercluster-sample
