test/e2e/setup/zookeeper-assert.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeepercluster-sample-default
status:
  availableReplicas: 1
  replicas: 1
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: sample-hdfs-znode
