test/e2e/smoke/discovery-listener/hdfs-assert.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hdfscluster-listener-journalnode-default
status:
  availableReplicas: 1
  replicas: 1
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hdfscluster-listener-namenode-default
status:
  availableReplicas: 2
  replicas: 2
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hdfscluster-listener-datanode-default
status:
  availableReplicas: 1
  replicas: 1
